--- a/geoartstile.css
+++ b/geoartstile.css
@@ -19,7 +19,8 @@ ul{
 	background:linear-gradient(#D35400, #50351a) ;
 	height: 100px;
 	flex-wrap: wrap;
-	align-items: center;		
+	align-items: center;
+	color:#fff 
 }
 
 .head-title{
