--- a/geoartstile.css
+++ b/geoartstile.css
@@ -31,6 +31,7 @@ ul{
 	font-family: 'Public Sans', sans-serif;
    font-family: 'Roboto', sans-serif;
    font-size: 40px;
+	color:#fff
 ;
 
 }
@@ -40,6 +41,7 @@ ul{
 	padding-left: 10%;
 	font-family: 'Public Sans', sans-serif;
    font-family: 'Roboto', sans-serif;
+	color:#fff
  
  }
 
@@ -50,6 +52,7 @@ ul{
 	text-align: center;
 	font-family: 'Public Sans', sans-serif;
    font-family: 'Roboto', sans-serif;
+	 color:#fff
 	
  }
 
@@ -60,6 +63,7 @@ ul{
 	text-align: center;
 	font-family: 'Public Sans', sans-serif;
    font-family: 'Roboto', sans-serif;
+	  color:#fff
 	
  }
 
