--- a/geoartstile.css
+++ b/geoartstile.css
@@ -1,14 +1,17 @@
 .body{
-	background-color: ;#e3ded8
+	font-family: 'Roboto Slab', serif;
+	background-color: #f4f4f9;
+	margin: 0;
+	padding: 0;
+	color: #333;
 }
 
 a{
-	background-color: transparent;
-	text-decoration: none;
-	text-shadow: none;
-	box-shadow: none;
-        color:black
-	
+	color: white;
+  margin: 0 1rem;
+  text-decoration: none;
+  font-weight: bold;
+
 }
 
 ul{
@@ -18,8 +21,10 @@ ul{
 }
 .head {
 	display: flex;
-	background:linear-gradient(#D35400, #50351a) ;
+	background:#2c3e50 ;
+	color: white
 	height: 100px;
+	padding: 1rem 2rem;
 	flex-wrap: wrap;
 	align-items: center;
 }
@@ -29,8 +34,7 @@ ul{
 	margin: 10px;
 	padding-left: 5%;
 	text-align: center;
-	font-family: 'Public Sans', sans-serif;
-   font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto Slab', serif;
    font-size: 40px;
 	color:#fff
 ;
@@ -40,10 +44,9 @@ ul{
  display: flex;
 	margin: 10px;
 	padding-left: 10%;
-	font-family: 'Public Sans', sans-serif;
-   font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto Slab', serif;
 	color:#fff
- 
+
  }
 
  .head-referencia-nosotros{
@@ -51,10 +54,9 @@ ul{
 	margin: 10px;
 	padding-left: 15%;
 	text-align: center;
-	font-family: 'Public Sans', sans-serif;
-   font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto Slab', serif;
 	 color:#fff
-	
+
  }
 
   .head-referencia-contactos{
@@ -62,44 +64,39 @@ ul{
 	margin: 10px;
 	padding-left: 20%;
 	text-align: center;
-	font-family: 'Public Sans', sans-serif;
-   font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto Slab', serif;
 	  color:#fff
-	
+
  }
 
 .blog {
-	display: flex;
-	background-color: #FCF3CF ;
-	height: 75px;
-	margin: 10px;
+  padding: 0.5rem;
+  text-align: center;
+	background:#2c3e50 ;
+	color: white
 
-	
+
 }
 .blog-title {
 	display: flex;
 	height: 75px;
 	width: 100% ;
-	background-color: #c1a154 ;
+	background-color: #2c3e50;
 	border-radius: 20px;
 	font-size: 42px;
 
-	font-family: 'Public Sans', sans-serif;
-   font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto Slab', serif;
    justify-content: center;
    align-items: center;
-	
+
 }
 .post {
 	display: flex;
-	height: 1000px;
-	background-color: #EDBB99 ;
-	margin: 10px;
-	border-radius: 20px;
+  padding: 0.5rem;
+  text-align: center;
 	flex-direction: column;
 
-	font-family: 'Public Sans', sans-serif;
-   font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto Slab', serif;
    justify-content: center;
    align-items: center;
 
@@ -107,28 +104,19 @@ ul{
 }
 
 .live-filter{
-  display: flex;
-  border-radius: 20px;
-  margin: 10px;
-  background-color: #EDBB99;
-	font-family: 'Public Sans', sans-serif;
-   font-family: 'Roboto', sans-serif;
-   justify-content: center;
-   align-items: center;
+	font-family: 'Roboto Slab', serif;
+	 margin: 2rem auto;
+	 text-align: center;
 }
 .search{
-  background-color: #EDBB99;
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
-  padding: 10px;
-  color: #fff;
-  font-size: 21px;
-  font-family: 'Public Sans', sans-serif;
-   font-family: 'Roboto', sans-serif;
+
 }
 .search input{
-	width: 450px;
-	border: none;
+	width: 60%;
+  padding: 0.5rem;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
 
 
@@ -139,14 +127,18 @@ ul{
 
 .libreria {
 	display: flex;
-	height: 750px;
-	width: 1000px;
-	background-color: #EDBB99;
+	max-width: 1000px;
+	width: 90%;
+	max-height: 750px;
+	height: auto;
+	background-color: #34495e;
+
+
+
 	overflow: hidden;
 	overflow-y: scroll;
 	font-size: 21px;
-	font-family: 'Public Sans', sans-serif;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto Slab', serif;
 	justify-content: center;
 
 }
@@ -160,91 +152,51 @@ ul{
 	overflow: hidden;
 	overflow-y: scroll;
 
-	font-family: 'Public Sans', sans-serif;
-   font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto Slab', serif;
    justify-content: center;
    align-items: center;
-	
+
 }
 
-.nosotros {
-	display: flex;
-	background-color: #FCF3CF ;
-	height: 75px;
-	margin: 10px;
 
-	
-}
-.nosotros-title {
-	display: flex;
-	height: 75px;
-	width: 100% ;
-	background-color: #c1a154 ;
-	font-size: 42px;
-
-	font-family: 'Public Sans', sans-serif;
-   font-family: 'Roboto', sans-serif;
-   justify-content: center;
-   align-items: center;
-   border-radius: 20px;
-	
-}
-
-.resumen {
-	display: flex;
-	background-color: #FCF3CF ;
-	height: 50px;
-	margin: 10px;
-
-	
-}
-.resumen-contenido {
-	display: flex;
-	height: 50px;
-	width: 100% ;
-	background-color: #EDBB99 ;
-	border-radius: 20px;
-	font-size: 21px;
-
-	font-family: 'Public Sans', sans-serif;
-   font-family: 'Roboto', sans-serif;
-   justify-content: center;
-   align-items: center;
-	
-}
 
 .contactos {
 	display: flex;
-	background-color: #FCF3CF ;
-	height: 75px;
-	margin: 10px;
-	border-radius: 30px;
+	background-color: #2c3e50;
+	color: white;
+	text-align: center;
+	padding: 1rem;
+	margin-top: 2rem;
 
-	
 }
 .contactos-title {
 	display: flex;
 	height: 75px;
 	width: 100% ;
-	background-color: #c1a154 ;
 	border-radius: 20px;
 	font-size: 42px;
+background-color: #2c3e50;
+	padding: 0.5rem;
+	text-align: center;
 
-	font-family: 'Public Sans', sans-serif;
-   font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto Slab', serif;
    justify-content: center;
    align-items: center;
-	
+
 }
 
 .paginas {
 	display: flex;
-	background-color: #EDBB99;
-	border-radius: 20px;
 	flex-wrap: wrap;
 	align-items: center;
 	 justify-content: center;
 	 font-size: 21px;
+	 background-color: #2c3e50;
+	 color: white;
+	 text-align: center;
+	 padding: 1rem;
+	 margin-top: 2rem;
+
 
 
 
@@ -254,11 +206,10 @@ ul{
 	margin: 15px;
 
 
-	font-family: 'Public Sans', sans-serif;
-   font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto Slab', serif;
    justify-content: center;
    align-items: center;
-	
+
 }
 .facebook-logo{
 	display: flex;
@@ -270,11 +221,10 @@ ul{
 	margin: 15px;
 
 
-	font-family: 'Public Sans', sans-serif;
-   font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto Slab', serif;
    justify-content: center;
    align-items: center;
-	
+
 }
 
 .twitter-logo{
@@ -287,11 +237,10 @@ ul{
 	margin: 15px;
 
 
-	font-family: 'Public Sans', sans-serif;
-   font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto Slab', serif;
    justify-content: center;
    align-items: center;
-	
+
 }
 
 .oficial-logo{
@@ -304,8 +253,7 @@ ul{
 	margin: 15px;
 
 
-	font-family: 'Public Sans', sans-serif;
-   font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto Slab', serif;
    justify-content: center;
    align-items: center;
 }
@@ -316,16 +264,6 @@ ul{
 	align-items: center
 }
 
-.contador{
-	display: flex;
-	margin: 15px;
-
-
-	font-family: 'Public Sans', sans-serif;
-   font-family: 'Roboto', sans-serif;
-   justify-content: center;
-   align-items: center;
-	 }
 
 @media only screen and ( max-width: 800px)  /* reponsive */
 {
@@ -333,8 +271,8 @@ ul{
 		font-size: 5px;
 		width: 310px
 
-		
-		
+
+
 }
 .search input{
 	width: 200px;
